--- a/src/style.css
+++ b/src/style.css
@@ -171,7 +171,9 @@ li{
     font-family: 'GeneralSans-Medium';
     list-style: none;
 }
-
+p{
+  font-family: 'GeneralSans-Regular';
+}
 
 h1{
   overflow-wrap: break-word;
@@ -259,4 +261,44 @@ select#category{
   padding: 6px;
   border:2px solid var(--accent);
   font-family: 'GeneralSans-Medium';
+}
+.view-header{
+  color: var(--text);
+  font-family: 'GeneralSans-Bold';
+  text-align: center;
+  margin-top: 10vh;
+  font-size: 2.5rem;
+
+}
+.view-table{
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10vh;
+  
+}
+table{
+  background-color: var(--primary);
+  padding: 10px;
+
+}
+td, th{
+  padding: 20px 10px 20px 10px;
+  border: 2px solid var(--background);
+}
+th{
+  font-family: 'GeneralSans-Bold';
+}
+td{
+  font-family: 'GeneralSans-Regular';
+}
+.btn-table{
+  font-family: 'GeneralSans-Medium';
+  background: transparent;
+  border: 2px solid var(--background);
+}
+div.view-container-button{
+  display: flex;
+  justify-content: space-evenly;
 }
